mxslc/tests/data/error/loadlib_error_1.mxsl
#loadlib "../add_include_dir/math.mxsl" ()

float x = mad(pi(), 3.0, 4.0);
